# turbocopy

./: Cargo.toml  README.md  myfile.txt
src/: copy.rs
turbocopy_bench/: Cargo.toml
turbocopy_bench/src/: performance.rs
